work stack + logging